Fix fixed position jumping on Android

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -7,6 +7,7 @@
   left: 0;
   padding: 0;
   z-index: (@zindex-modal + 1);
+  transform: translateZ(0); // Prevent jumping on Android
   color: @white-color;
   background-color: rgba(@ku-cookiebox-bg, .96);
   overflow-y: scroll;
